popup: fix css positioninig of labels so they don't overlap with build names

--- a/css/popup.css
+++ b/css/popup.css
@@ -25,11 +25,6 @@ body {
 	text-align: center;
 }
 
-.labels {
-	position: absolute;
-	right: 30px;
-}
-
 .no-services-message {
 	color: #F90;
 	font-weight: bold;
